--- a/utahtech2/Style.css
+++ b/utahtech2/Style.css
@@ -3,3 +3,35 @@ body {
     color:#666666;
     font-family: Verdana, Arial, sans-serif;
 }
+header {
+    background-color: #003058;
+    color: #FFFFFF;
+}
+header h1 {
+    line-height: 140%;
+    padding: 5rem;
+}
+nav {
+    background-color: #F3F3F3;
+}
+h2 {
+    color:#424242;
+    font-family: Georgia, serif, sans-serif;
+}
+dt {
+    color:#003058;
+    font:bold;
+}
+.ut {
+    color:#ba1c21
+}
+footer {
+    font-size: 70rem;
+    font-style: italic;
+    text-align: center;
+}
+#wrapper {
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+}
