--- a/utahtech2/Style.css
+++ b/utahtech2/Style.css
@@ -6,13 +6,16 @@ body {
 header {
     background-color: #003058;
     color: #FFFFFF;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 header h1 {
     line-height: 140%;
-    padding: 5rem;
+    padding: 0.5rem;
+
 }
 nav {
     background-color: #F3F3F3;
+    font: bold;
 }
 h2 {
     color:#424242;
@@ -26,7 +29,7 @@ dt {
     color:#ba1c21
 }
 footer {
-    font-size: 70rem;
+    font-size: 0.7rem;
     font-style: italic;
     text-align: center;
 }
